--- a/angular.json
+++ b/angular.json
@@ -32,8 +32,9 @@
               }
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/cyan-orange.css",
-              "src/styles.scss"
+              "@angular/material/prebuilt-themes/rose-red.css",
+              "src/styles.scss",
+              "src/general-style/general-style.scss"
             ],
             "scripts": []
           },
